--- a/tensile.cabal
+++ b/tensile.cabal
@@ -30,10 +30,13 @@ library
     , bytestring
     , constraints
     , dimensions
+    , lens
+    , proto-lens
     , reflection
     , tensorflow
     , tensorflow-ops
     , tensorflow-core-ops
+    , tensorflow-proto
     , text
     , vector
 
