--- a/tensile.cabal
+++ b/tensile.cabal
@@ -44,6 +44,8 @@ library
   exposed-modules:
       Numeric.Tensile.Tensor
     , Numeric.Tensile.Operator
+    , Numeric.Tensile.Operator.Class
+    , Numeric.Tensile.Operator.Lifted
   default-language: Haskell2010
 
 executable tensile-tensorflow
