--- a/tensile/tensile.cabal
+++ b/tensile/tensile.cabal
@@ -24,6 +24,7 @@ library
       base >= 4.9 && < 5
     , backprop
     , dimensions
+    , singletons
     , vector
 
   exposed-modules:
@@ -31,7 +32,7 @@ library
     , Numeric.Tensile.Operator
     , Numeric.Tensile.Operator.Lifted
   default-language: Haskell2010
-  default-extensions: DataKinds TypeApplications ScopedTypeVariables
+  default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables
 
 library tensile-vector
   ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
@@ -40,12 +41,13 @@ library tensile-vector
   build-depends:
       base >= 4.9 && < 5
     , dimensions
+    , singletons
     , vector
     , vector-sized
   exposed-modules:
-      Numeric.Tensile.Tensor.Types
+      Data.Tensor
   default-language: Haskell2010
-  default-extensions: DataKinds TypeApplications ScopedTypeVariables OverloadedLists
+  default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables OverloadedLists
 
 executable mnist
   main-is: 
@@ -56,6 +58,6 @@ executable mnist
     , tensile-vector
     , vector
   mixins:
-      tensile (Numeric.Tensile.Tensor as Numeric.Tensile.Tensor) requires (Numeric.Tensile.Tensor.Types as Numeric.Tensile.Tensor.Types)
+      tensile (Numeric.Tensile.Tensor as Numeric.Tensile.Tensor) requires (Numeric.Tensile.Tensor.Types as Data.Tensor)
   default-language: Haskell2010
   default-extensions: DataKinds ScopedTypeVariables OverloadedLists
