--- a/tensile-vector/tensile-vector.cabal
+++ b/tensile-vector/tensile-vector.cabal
@@ -18,16 +18,24 @@ library
   ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
   hs-source-dirs:
       src
-  signatures:
-      Data.Tensor.Types
   build-depends:
       base >= 4.9 && < 5
-    , backprop
     , dimensions
     , singletons
+    , tensile
     , vector
-
   exposed-modules:
-      Data.Tensor
+      Data.Tensor.Types
   default-language: Haskell2010
-  default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables
+  default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables OverloadedLists
+
+executable mnist
+  main-is: 
+      Main.hs
+  build-depends:
+      base >= 4.9 && < 5
+    , tensile
+    , tensile-vector
+    , vector
+  default-language: Haskell2010
+  default-extensions: DataKinds ScopedTypeVariables OverloadedLists
