--- a/tensile-vector/tensile-vector.cabal
+++ b/tensile-vector/tensile-vector.cabal
@@ -17,14 +17,14 @@ source-repository head
 library
   ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
   hs-source-dirs:
-      src
+      lib
   build-depends:
       base >= 4.9 && < 5
     , dimensions
     , singletons
     , vector
   exposed-modules:
-      Data.Tensor.Types
+      Data.Tensor.Internal.Types
   default-language: Haskell2010
   default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables OverloadedLists
 
