--- a/tensile-vector/tensile-vector.cabal
+++ b/tensile-vector/tensile-vector.cabal
@@ -23,14 +23,18 @@ library
 
       Numeric.Tensile
     --, Numeric.Tensile.Quantization.Lifted
+  reexported-modules:  
+      Data.Tensor
   build-depends:
       base >= 4.9 && < 5
     , dimensions
     , singletons
     , tensile
     , tensile-vector-definitions
-    , tensile-vector-signatures
     , vector
+  mixins:
+      tensile requires (Numeric.Tensile.Quantization.Types as Numeric.Tensile.Quantization.Internal.Types)
+   -- , tensile requires (Data.Tensor.Types as Data.Tensor.Internal.Types)
   default-language: Haskell2010
   default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables OverloadedLists
 
@@ -43,6 +47,10 @@ library tensile-vector-definitions
       Data.Tensor.Internal.Types
     , Numeric.Tensile.Quantization.Internal.Types
     --, Numeric.Tensile.Quantization.Lifted
+  reexported-modules:  
+      Data.Tensor.Internal.Types as Data.Tensor.Types
+    , Numeric.Tensile.Quantization.Internal.Types as Numeric.Tensile.Quantization.Types
+
   build-depends:
       base >= 4.9 && < 5
     , dimensions
@@ -51,21 +59,15 @@ library tensile-vector-definitions
   default-language: Haskell2010
   default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables OverloadedLists
 
-library tensile-vector-signatures
-  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
-  hs-source-dirs:
-      sig
-  signatures:
-      Numeric.Tensile.Quantization.Internal.Types
+executable mnist
+  main-is: 
+      Main.hs
   build-depends:
       base >= 4.9 && < 5
-    , dimensions
-    , singletons
-    , tensile-signatures
+    , tensile-vector
     , vector
-  mixins:
-      tensile-signatures requires (Numeric.Tensile.Quantization.Types as Numeric.Tensile.Quantization.Internal.Types)
-    , tensile-signatures requires (Data.Tensor.Types as Data.Tensor.Internal.Types)
-  default-extensions: NoImplicitPrelude
+  default-language: Haskell2010
+  default-extensions: DataKinds ScopedTypeVariables OverloadedLists
+
 
 
