--- a/tensile-vector/tensile-vector.cabal
+++ b/tensile-vector/tensile-vector.cabal
@@ -29,16 +29,15 @@ library
       base >= 4.9 && < 5
     , dimensions
     , singletons
-    , tensile
-    , tensile-vector-definitions
+    , signatures
+    , definitions
     , vector
-  mixins:
-      tensile requires (Numeric.Tensile.Quantization.Types as Numeric.Tensile.Quantization.Internal.Types)
+
    -- , tensile requires (Data.Tensor.Types as Data.Tensor.Internal.Types)
   default-language: Haskell2010
   default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables OverloadedLists
 
-library tensile-vector-definitions
+library definitions
   ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
   hs-source-dirs:
       def
@@ -59,6 +58,22 @@ library tensile-vector-definitions
   default-language: Haskell2010
   default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables OverloadedLists
 
+library signatures
+  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
+  hs-source-dirs:
+      sig
+  signatures:
+      Numeric.Tensile.Quantization.Internal.Types
+  reexported-modules: 
+      Data.Tensor
+  build-depends:
+      base >= 4.9 && < 5
+    , tensile
+  mixins:
+      tensile requires (Numeric.Tensile.Quantization.Types as Numeric.Tensile.Quantization.Internal.Types)
+  default-language: Haskell2010
+  default-extensions: NoImplicitPrelude
+
 executable mnist
   main-is: 
       Main.hs
@@ -68,6 +83,3 @@ executable mnist
     , vector
   default-language: Haskell2010
   default-extensions: DataKinds ScopedTypeVariables OverloadedLists
-
-
-
