--- a/tensile/tensile-test/package.cabal
+++ b/tensile/tensile-test/package.cabal
@@ -1,4 +1,4 @@
-name:           tensile-test
+name:           tensile
 version:        0.0.1
 synopsis:       A cross-platform library for deep learning.
 description:    Tensile is a lightweight neural network API that uses backpack to integrate with common deep learning frameworks such as TensorFlow, Torch, or ONNX.
@@ -14,42 +14,7 @@ source-repository head
   type: git
   location: https://github.com/cmk/tensile
 
-executable main
-    main-is: 
-        Main.hs
-    build-depends:
-        base          >= 4 && < 5,
-        def,
-        foo,
-        lib,
-        vector
-  default-language: Haskell2010
-  default-extensions: DataKinds ScopedTypeVariables OverloadedLists
-
-library def
-    hs-source-dirs: 
-        def
-    exposed-modules:
-        Data.Tensor.Types
-        Numeric.Tensile.Quantization.Operations
-    build-depends:
-        base          >= 4 && < 5,
-        dimensions,
-        singletons,
-        vector
-    default-language: Haskell2010
-    default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables OverloadedLists
-
-library foo
-    hs-source-dirs: 
-        foo
-    build-depends:
-        base          >= 4 && < 5,
-        signatures
-    default-language: Haskell2010
-    --default-extensions: NoImplicitPrelude
-
-library lib
+library 
     hs-source-dirs: 
         lib
     exposed-modules:
@@ -64,7 +29,7 @@ library lib
     default-language: Haskell2010
     default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables
 
-library signatures
+library tensile-signatures
     hs-source-dirs: 
         sig
     signatures:
@@ -77,3 +42,38 @@ library signatures
         vector
     default-language: Haskell2010
     default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables
+
+library local-signatures
+    hs-source-dirs: 
+        local
+    build-depends:
+        base          >= 4 && < 5,
+        tensile-signatures
+    default-language: Haskell2010
+
+library definitions
+    hs-source-dirs: 
+        def
+    exposed-modules:
+        Data.Tensor.Types
+        Numeric.Tensile.Quantization.Operations
+    build-depends:
+        base          >= 4 && < 5,
+        dimensions,
+        singletons,
+        vector
+    default-language: Haskell2010
+    default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables OverloadedLists
+
+
+executable main
+    main-is: 
+        Main.hs
+    build-depends:
+        base          >= 4 && < 5,
+        definitions,
+        tensile,
+        tensile-signatures,
+        vector
+  default-language: Haskell2010
+  default-extensions: DataKinds ScopedTypeVariables OverloadedLists
