--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -34,6 +34,7 @@ library tensile-signatures
         sig
     signatures:
         Data.Tensor.Types
+        Numeric.Tensile.Linear.Operations
         Numeric.Tensile.Quantization.Operations
     build-depends:
         base          >= 4 && < 5,
@@ -56,10 +57,12 @@ library definitions
         def
     exposed-modules:
         Data.Tensor.Types
+        Numeric.Tensile.Linear.Operations
         Numeric.Tensile.Quantization.Operations
     build-depends:
         base          >= 4 && < 5,
         dimensions,
+        eigen,
         singletons,
         vector
     default-language: Haskell2010
