--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -74,6 +74,7 @@ executable main
     build-depends:
         base          >= 4 && < 5,
         definitions,
+        eigen,
         tensile,
         vector
   default-language: Haskell2010
