--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -42,7 +42,7 @@ library tensile-signatures
         singletons,
         vector
     default-language: Haskell2010
-    default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables
+    default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeOperators TypeFamilies ScopedTypeVariables
 
 library local-signatures
     hs-source-dirs: 
@@ -66,7 +66,7 @@ library definitions
         singletons,
         vector
     default-language: Haskell2010
-    default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables OverloadedLists
+    default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies TypeOperators ScopedTypeVariables OverloadedLists
 
 executable main
     main-is: 
