--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -34,8 +34,8 @@ library tensile-signatures
         sig
     signatures:
         Data.Tensor.Types
-        Numeric.Tensile.Linear.Operations
-        Numeric.Tensile.Quantization.Operations
+        Numeric.Tensile.Operations.Linear.Internal
+        Numeric.Tensile.Operations.Quantization.Internal
     build-depends:
         base          >= 4 && < 5,
         dimensions,
@@ -58,8 +58,8 @@ library reference
     exposed-modules:
         Data.Tensor.Types
         Data.Tensor.Internal.Array
-        Numeric.Tensile.Linear.Operations
-        Numeric.Tensile.Quantization.Operations
+        Numeric.Tensile.Operations.Linear.Internal     
+        Numeric.Tensile.Operations.Quantization.Internal
     build-depends:
         base          >= 4 && < 5,
         dimensions,
@@ -79,5 +79,5 @@ executable main
         easytensor,
         tensile,
         vector
-  default-language: Haskell2010
-  default-extensions: DataKinds ScopedTypeVariables OverloadedLists
+    default-language: Haskell2010
+    default-extensions: DataKinds ScopedTypeVariables OverloadedLists
