--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -6,7 +6,7 @@ category:       Machine Learning
 homepage:       https://github.com/cmk/tensile#readme
 bug-reports:    https://github.com/cmk/tensile/issues
 maintainer:     Chris McKinlay
-license:        BSD-3-Clause
+license:        BSD3
 build-type:     Simple
 cabal-version:  >= 2.0
 
