--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -19,6 +19,7 @@ library
         lib
     exposed-modules:
         Data.Tensor
+        Numeric.Tensile.Operations.Linear.Unlifted
     build-depends:
         base          >= 4 && < 5,
         backprop,
@@ -27,7 +28,7 @@ library
         tensile-signatures,
         vector
     default-language: Haskell2010
-    default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies ScopedTypeVariables
+    default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies TypeOperators ScopedTypeVariables
 
 library tensile-signatures
     hs-source-dirs: 
