--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -70,6 +70,22 @@ library reference
     default-language: Haskell2010
     default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies TypeOperators ScopedTypeVariables OverloadedLists
 
+library ref2
+    hs-source-dirs: 
+        ref2
+    exposed-modules:
+        Data.Tensor.Types
+        Data.Tensor.Internal.Array
+        Numeric.Tensile.Operations.Linear.Internal     
+        Numeric.Tensile.Operations.Quantization.Internal
+    build-depends:
+        base          >= 4 && < 5,
+        dimensions,
+        singletons,
+        vector
+    default-language: Haskell2010
+    default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies TypeOperators ScopedTypeVariables OverloadedLists
+
 executable main
     main-is: 
         Main.hs
