--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -67,8 +67,7 @@ library reference
         easytensor,
         singletons,
         vector,
-        combinat,
-        reflection
+        combinat
     default-language: Haskell2010
     default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies TypeOperators ScopedTypeVariables OverloadedLists
 
