--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -24,9 +24,8 @@ library
     build-depends:
         base          >= 4 && < 5,
         backprop,
-        dimensions,
-        singletons,
         tensile-signatures,
+        tensile-types,
         vector
     default-language: Haskell2010
     default-extensions: ConstraintKinds DataKinds FlexibleContexts TypeApplications TypeFamilies TypeOperators ScopedTypeVariables
@@ -106,7 +105,6 @@ executable main
         Main.hs
     build-depends:
         base          >= 4 && < 5,
-        dimensions,
         reference,
         tensile,
         tensile-types,
