--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -24,7 +24,7 @@ library
     build-depends:
         base == 4.*,
         backprop,
-        tensile-signatures,
+        signatures,
         tensile-types,
         vector
     default-extensions: 
@@ -44,10 +44,9 @@ library tensile-test
         lib/test
     exposed-modules:
         Test.Numeric.Tensile.Tensor.Gen
-        -- Test.Numeric.Tensile.Operations.Linear.Property
+        Test.Numeric.Tensile.Operations.Linear
     signatures:
         Test.Numeric.Tensile.Tensor.Gen.Internal
-        -- Test.Numeric.Tensile.Operations.Linear.Property.Internal   
     build-depends:
         base == 4.*,
         hedgehog,
@@ -86,7 +85,7 @@ library tensile-types
         TypeOperators 
     default-language: Haskell2010
 
-library tensile-signatures
+library signatures
     hs-source-dirs: 
         sig
     signatures:
@@ -114,7 +113,7 @@ library local-signatures
         local
     build-depends:
         base == 4.*,
-        tensile-signatures
+        signatures
     default-language: Haskell2010
 
 library reference
@@ -145,8 +144,7 @@ library reference-test
     hs-source-dirs: 
         ref/test
     exposed-modules:
-        Test.Numeric.Tensile.Tensor.Gen.Internal
-        -- Test.Numeric.Tensile.Operations.Linear.Property.Internal     
+        Test.Numeric.Tensile.Tensor.Gen.Internal    
     build-depends:
         base == 4.*,
         hedgehog,
@@ -161,29 +159,6 @@ library reference-test
         OverloadedLists
     default-language: Haskell2010
 
-library old
-    hs-source-dirs: 
-        ref-old
-    exposed-modules:
-        Numeric.Tensile.Tensor.Types
-        Numeric.Tensile.Tensor.Internal.Array
-        Numeric.Tensile.Operations.Linear.Internal     
-        Numeric.Tensile.Operations.Quantization.Internal
-    build-depends:
-        base == 4.*,
-        dimensions,
-        singletons,
-        vector
-    default-extensions: 
-        ConstraintKinds, 
-        DataKinds,
-        FlexibleContexts,
-        ScopedTypeVariables,
-        TypeApplications,
-        TypeFamilies,
-        TypeOperators 
-    default-language: Haskell2010
-
 test-suite test
     type:                
         exitcode-stdio-1.0
@@ -193,7 +168,6 @@ test-suite test
         test.hs
     other-modules:
         Test.Numeric.Tensile.Operations.Linear.Property
-        Test.Numeric.Tensile.Operations.Linear.Property.Internal 
     build-depends:       
         base == 4.*,
         hedgehog,
@@ -227,3 +201,26 @@ executable main
         ScopedTypeVariables,
         TypeOperators,
         OverloadedLists
+
+library old
+    hs-source-dirs: 
+        ref-old
+    exposed-modules:
+        Numeric.Tensile.Tensor.Types
+        Numeric.Tensile.Tensor.Internal.Array
+        Numeric.Tensile.Operations.Linear.Internal     
+        Numeric.Tensile.Operations.Quantization.Internal
+    build-depends:
+        base == 4.*,
+        dimensions,
+        singletons,
+        vector
+    default-extensions: 
+        ConstraintKinds, 
+        DataKinds,
+        FlexibleContexts,
+        ScopedTypeVariables,
+        TypeApplications,
+        TypeFamilies,
+        TypeOperators 
+    default-language: Haskell2010
