Wip rank-2 gen.

--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -55,6 +55,7 @@ library tensile-test
         vector
     default-extensions: 
         DataKinds,
+        RankNTypes,
         ScopedTypeVariables,
         TypeApplications,
         TypeOperators,
