--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -66,13 +66,14 @@ library tensile-types
     hs-source-dirs: 
         types/src
     exposed-modules:
-        Numeric.Tensile.Index
-        Numeric.Tensile.Permutation
+        -- Numeric.Tensile.Index
+        -- Numeric.Tensile.Permutation
         Numeric.Tensile.Types
     build-depends:
         base == 4.*,
         combinat,
         dimensions,
+        reflection,
         singletons
     default-extensions: 
         ConstraintKinds, 
