--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -30,11 +30,10 @@ library
         vector-sized
     default-extensions: 
         ConstraintKinds, 
-        DataKinds,
         FlexibleContexts,
-        PolyKinds,
         RankNTypes,
         ScopedTypeVariables,
+        TypeInType,
         TypeApplications,
         TypeFamilies,
         TypeOperators 
@@ -55,9 +54,9 @@ library tensile-test
         tensile-types,
         vector
     default-extensions: 
-        DataKinds,
         RankNTypes,
         ScopedTypeVariables,
+        TypeInType,
         TypeApplications,
         TypeOperators,
         OverloadedLists
@@ -78,11 +77,10 @@ library tensile-types
         singletons
     default-extensions: 
         ConstraintKinds, 
-        DataKinds,
         FlexibleContexts,
-        PolyKinds,
         RankNTypes,
         ScopedTypeVariables,
+        TypeInType,
         TypeApplications,
         TypeFamilies,
         TypeOperators 
@@ -102,11 +100,10 @@ library signatures
         vector-sized
     default-extensions: 
         ConstraintKinds, 
-        DataKinds,
         FlexibleContexts,
-        PolyKinds,
         RankNTypes,
         ScopedTypeVariables,
+        TypeInType,
         TypeApplications,
         TypeFamilies,
         TypeOperators 
@@ -137,11 +134,10 @@ library reference
     default-extensions:
         AllowAmbiguousTypes,
         ConstraintKinds, 
-        DataKinds,
         FlexibleContexts,
-        PolyKinds,
         RankNTypes,
         ScopedTypeVariables,
+        TypeInType,
         TypeApplications,
         TypeFamilies,
         TypeOperators 
@@ -159,9 +155,9 @@ library reference-test
         tensile-types,
         vector
     default-extensions: 
-        DataKinds,
         ScopedTypeVariables,
         TypeApplications,
+        TypeInType,
         TypeOperators,
         OverloadedLists
     default-language: Haskell2010
@@ -185,9 +181,9 @@ test-suite test
         reference,
         reference-test
     default-extensions:
-        DataKinds,
         ScopedTypeVariables,
         TypeApplications,
+        TypeInType,
         TypeOperators,
         OverloadedLists
     default-language: Haskell2010
@@ -204,9 +200,9 @@ executable main
         vector
     default-language: Haskell2010
     default-extensions: 
-        DataKinds,
         ScopedTypeVariables,
         TypeOperators,
+        TypeInType,
         OverloadedLists
 
 library old
