--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -20,7 +20,6 @@ library
     exposed-modules:
         Numeric.Tensile.Tensor
         Numeric.Tensile.Operations.Linear.Unlifted
-        Numeric.Tensile.Operations.Manipulation.Unlifted
     build-depends:
         base == 4.*,
         backprop,
@@ -52,6 +51,7 @@ library tensile-test
         hedgehog,
         tensile,
         tensile-types,
+        tensile-types-test,
         vector
     default-extensions: 
         RankNTypes,
@@ -74,7 +74,28 @@ library tensile-types
         combinat,
         dimensions,
         finite-typelits,
+        reflection,
         singletons
+    default-extensions: 
+        ConstraintKinds, 
+        FlexibleContexts,
+        RankNTypes,
+        ScopedTypeVariables,
+        TypeInType,
+        TypeApplications,
+        TypeFamilies,
+        TypeOperators 
+    default-language: Haskell2010
+
+library tensile-types-test 
+    hs-source-dirs: 
+        types/test
+    exposed-modules:
+        Test.Numeric.Tensile.Dimensions.Gen
+    build-depends:
+        base == 4.*,
+        hedgehog,
+        tensile-types
     default-extensions: 
         ConstraintKinds, 
         FlexibleContexts,
@@ -129,6 +150,7 @@ library reference
         finite-typelits,
         hmatrix,
         hmatrix-backprop,
+        reflection,
         tensile-types,
         vector,
         vector-sized
