--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -43,6 +43,7 @@ library tensile-test
         lib/test
     exposed-modules:
         Test.Numeric.Tensile.Dimensions.Gen
+        Test.Numeric.Tensile.Dimensions.Index.Predicate
         Test.Numeric.Tensile.Tensor.Gen
         Test.Numeric.Tensile.Operations.Linear.Predicate
     signatures:
