Add new prop & track regression from here.

--- a/tensile/package.cabal
+++ b/tensile/package.cabal
@@ -172,6 +172,7 @@ test-suite test
     main-is:            
         test.hs
     other-modules:
+        Test.Numeric.Tensile.Dimensions.Index.Property 
         Test.Numeric.Tensile.Operations.Linear.Property
     build-depends:       
         base == 4.*,
